remove github key from _config

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
 # dribbble          : your_username
   email             : alex10791@gmail.com
   facebook          : alex10791
-  github            : alex10791
+# github            : alex10791
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
