--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Alexandros Andreou
-  image             : /assets/profile.jpg
+  image             : /assets/imgs/profile.jpg
 # behance           : your_username
 # dribbble          : your_username
   email             : alex10791@gmail.com
